# datamash

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  HACKING.md  INSTALL  Makefile.am  NEWS  README  README.md  THANKS  bootstrap  bootstrap.conf  cfg.mk  configure.ac  init.cfg  make_bin_dist.sh
.github/: ISSUE_TEMPLATE.txt  PULL_REQUEST_TEMPLATE.txt
build-aux/: aws-upload.sh  check-remote-make-all.sh  check-remote-make-extra.sh  check-remote-make-git.sh  check-remote-make.sh  create_corrupted_file_system.sh  create_small_file_system.sh  gen-coverage-report.sh  get_travis_dist.sh  make-cygwin-dist.sh  make_bin_dist.sh  prerelease-checks.sh  rebuild-coverage.sh  remote-make-check-all.sh  remote-make-check.sh  tag-new-version.sh
contrib/bash-completion/: datamash
debian/: calc.dirs  changelog  control  files  rules  watch
doc/: compute.texi  datamash-texinfo.css  datamash.texi  local.mk
examples/: Makefile.am  genes.txt  genes_h.txt  make_genes_example.sh  make_score_example.r  readme.md  scores.txt  scores_h.txt
hooks/: README.md  pre-commit.sh  setup-hooks.sh
lib/: local.mk
m4/: .gitignore  Makefile.am  ax_c_long_long.m4  gnulib-cache.m4
man/: Makefile.am  calc.x  compute.x  datamash.x  decorate.x  help2man  rand.x
po/: ChangeLog  Makevars  POTFILES.in
scripts/: Makefile.am  example.sh  support.sh
src/: Makefile.am  calc.c  column-headers.c  column-headers.h  compute.c  crosstab.c  crosstab.h  datamash.c  decorate-functions.c  decorate-functions.h  decorate.c  die.h  double-format.c  double-format.h  field-content-type.c  field-content-type.h  field-ops.c  field-ops.h  key-compare.c  key-compare.h  op-defs.c  op-defs.h  op-parser.c  op-parser.h  op-scanner.c  op-scanner.h  rand.c  randutils.c  randutils.h  strcnt.c  strcnt.h  system.h  text-lines.c  text-lines.h  text-options.c  text-options.h  utils.c  utils.h
tests/: .gitignore  Coreutils.pm  CuSkip.pm  CuTmpdir.pm  Makefile.am  calc-show-env.sh  calc-sort-errors.sh  calc-sort-header.sh  calc-tests.pl  calc-valgrind.sh  compute-rand.sh  compute-show-env.sh  compute-sort-errors.sh  compute-sort-header.sh  compute-stats.pl  compute-tests.pl  compute-valgrind.sh  datamash-check-tabular.pl  datamash-check.pl  datamash-crosstab.pl  datamash-error-msgs.pl  datamash-i18n-de.pl  datamash-io-errors-cheap.sh  datamash-io-errors.sh  datamash-md5.pl  datamash-output-format.pl  datamash-pair-tests.pl  datamash-parser.pl  datamash-rand.pl  datamash-rand.sh  datamash-sha.pl  datamash-show-env.sh  datamash-sort-errors.sh  datamash-sort-header-deprecated.pl  datamash-sort-header-deprecated.sh  datamash-sort-header.pl  datamash-sort-header.sh  datamash-stats.pl  datamash-strbin.sh  datamash-tests-2-deprecated.pl  (+14 more)
