# Copyright (C) 2014 Assaf Gordon <assafgordon@gmail.com
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.


##
## These example files will be installed in the "{prefix}/share/APPNAME/examples"
## directory (default "/usr/local/share/calc/examples")
##
examplesdir = $(pkgdatadir)/examples

dist_examples_DATA = readme.md \
		     scores.txt scores_h.txt \
		     genes.txt genes_h.txt

EXTRA_DIST = $(dist_examples_DATA)

